[gd_scene load_steps=24 format=1]

[ext_resource path="res://scripts/thescript.gd" type="Script" id=1]
[ext_resource path="res://scripts/parallax.gd" type="Script" id=2]
[ext_resource path="res://resources/bg.tex" type="Texture" id=3]
[ext_resource path="res://scripts/navmesh.gd" type="Script" id=4]
[ext_resource path="res://maps/test4.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/game_ui.gd" type="Script" id=7]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/camera.gd" type="Script" id=9]
[ext_resource path="res://resources/tileset.xml" type="TileSet" id=10]
[ext_resource path="res://static_objects/Bush.tscn" type="PackedScene" id=11]
[ext_resource path="res://static_objects/Potion.tscn" type="PackedScene" id=12]
[ext_resource path="res://resources/poison_particle.png" type="Texture" id=13]
[ext_resource path="res://resources/poison.png" type="Texture" id=14]
[ext_resource path="res://scripts/aoe_damage.gd" type="Script" id=15]
[ext_resource path="res://components/EffectModule.tscn" type="PackedScene" id=16]
[ext_resource path="res://resources/sfx/dunk.wav" type="Sample" id=17]
[ext_resource path="res://static_objects/MapChangeTrigger.tscn" type="PackedScene" id=18]

[sub_resource type="Animation" id=4]

length = 0.3
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.05, 0.1, 0.15, 0.2 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( 5, 6 ), Vector2( 10, 0 ), Vector2( -8, -5 ), Vector2( 0, -10 ) ] }

[sub_resource type="ColorRamp" id=5]

offsets = FloatArray( 0, 1 )
colors = ColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=6]

length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0, 12 ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/scale")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.15, 0.5 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ] }

[sub_resource type="CircleShape2D" id=7]

custom_solver_bias = 0.0
radius = 15.0

[sub_resource type="SampleLibrary" id=8]

samples/dunk = { "db":0.0, "pitch":1.0, "sample":ExtResource( 17 ) }

[node name="Game" type="Control"]

anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 320, 240 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
size_flags/stretch_ratio = 2.0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = false
script/script = ExtResource( 2 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

motion/scale = Vector2( 0.2, 0.2 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]

transform/pos = Vector2( 7.02258, 0.00012207 )
texture = ExtResource( 3 )
region = true
region_rect = Rect2( 0, 0, 4000, 4000 )

[node name="Nav" type="Navigation2D" parent="."]

script/script = ExtResource( 4 )

[node name="Map" parent="Nav" instance=ExtResource( 5 )]

[node name="Player_object" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( -1132.76, -515.885 )

[node name="UILayer" type="CanvasLayer" parent="."]

process/pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 7 )

[node name="HUD" parent="UILayer" instance=ExtResource( 8 )]

[node name="Camera2D" type="Camera2D" parent="."]

transform/pos = Vector2( 360, 235 )
offset = Vector2( 0, -10 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.5, 0.5 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0
script/script = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/ScreenShake = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="RogerTest" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 10 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="Bush" parent="RogerTest" instance=ExtResource( 11 )]

transform/pos = Vector2( 159, 319 )

[node name="Potion" parent="." instance=ExtResource( 12 )]

transform/pos = Vector2( 899.38, 486.428 )

[node name="Potion1" parent="." instance=ExtResource( 12 )]

transform/pos = Vector2( 1294.38, 1265.92 )

[node name="Potion3" parent="." instance=ExtResource( 12 )]

transform/pos = Vector2( 648.585, 1373.31 )

[node name="Potion4" parent="." instance=ExtResource( 12 )]

transform/pos = Vector2( 229.201, 482.587 )

[node name="Potion5" parent="." instance=ExtResource( 12 )]

transform/pos = Vector2( 40.0215, 1195.76 )

[node name="Potion6" parent="." instance=ExtResource( 12 )]

transform/pos = Vector2( 1315.74, 1417.97 )

[node name="Potion7" parent="." instance=ExtResource( 12 )]

transform/pos = Vector2( -1049, -418 )

[node name="Potion2" parent="." instance=ExtResource( 12 )]

transform/pos = Vector2( -1017, -583 )

[node name="Particles2D" type="Particles2D" parent="."]

transform/pos = Vector2( 1204.5, 1546.35 )
z/z = 6
config/amount = 32
config/lifetime = 2.0
config/texture = ExtResource( 13 )
params/direction = 0.0
params/spread = 30.0
params/linear_velocity = -10.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 10.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/direction = 10.0
randomness/linear_velocity = 1.0
randomness/gravity_direction = 1.0
randomness/initial_angle = 1.0
color/color_ramp = SubResource( 5 )

[node name="PoisonExplode" type="Sprite" parent="."]

transform/pos = Vector2( 609.972, 79.9719 )
z/z = 5
texture = ExtResource( 14 )
hframes = 13
script/script = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PoisonExplode"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Poof = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Poof"

[node name="Area2D" type="Area2D" parent="PoisonExplode"]

input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PoisonExplode/Area2D"]

shape = SubResource( 7 )
trigger = true
_update_shape_index = 0

[node name="Timer" type="Timer" parent="PoisonExplode"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[node name="EffectModule" parent="PoisonExplode" instance=ExtResource( 16 )]

effect_type = "death"
amount = -1.0

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="PoisonExplode"]

params/volume_db = -20.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 2.0
params/attenuation/max_distance = 512.0
params/attenuation/distance_exp = 0.366021
config/polyphony = 1
config/samples = SubResource( 8 )
config/pitch_random = 0.1

[node name="MapChangeTrigger" parent="." instance=ExtResource( 18 )]

transform/pos = Vector2( 398, 396 )
map_name = "Test3.tscn"

[node name="MapChangeTrigger1" parent="." instance=ExtResource( 18 )]

transform/pos = Vector2( 90, 531 )
map_name = "Test2.tscn"

[connection signal="jump" from="Player_object" to="Camera2D" method="_on_Player_object_jump"]

[connection signal="moved" from="Player_object" to="Camera2D" method="_on_Player_object_moved"]

[connection signal="pause" from="UILayer/HUD" to="." method="_on_HUD_pause"]

[connection signal="rotated" from="Camera2D" to="ParallaxBackground" method="_on_Camera2D_rotated"]

[connection signal="body_enter" from="PoisonExplode/Area2D" to="PoisonExplode" method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="PoisonExplode/Area2D" to="PoisonExplode" method="_on_Area2D_body_exit"]

[connection signal="timeout" from="PoisonExplode/Timer" to="PoisonExplode" method="_on_poison_tick"]

[connection signal="change_map" from="MapChangeTrigger" to="." method="_on_MapChangeTrigger_change_map"]

[connection signal="change_map" from="MapChangeTrigger1" to="." method="_on_MapChangeTrigger_change_map"]


